# referral

./: .browserslistrc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  dotenv_.py  main.py  pyproject.toml  requirements.txt
referral/: flasker.py  models.py  tokenization.py  user_login.py  views.py
referral/forms/: form_login.py  form_referral.py  form_registration.py  form_token_second.py  validators.py
referral/intarfeces/: referraler.py  user_login.py
referral/interfaces/: corser.py  files.py  referral_code_remove.py  referraler.py  tokenization.py  user_login.py
referral/models_more/: model_init.py  model_referral.py  model_users.py
referral/postman/: postman_tokens.py  sender.py
referral/static/: manifest.json
referral/static/scripts/: main-main-0753a71cdac1c905f7d2.js  main-main-20783f0eb8c9264b258b.js  main-main-2877f39c49f39294c0f4.js  main-main-398f8174ddc7f3203eea.js  main-main-789b1b83d82f775e0b26.js  main-main-7eb86927c34b17a5c935.js  main-main-cbe52b235e5ec8262971.js  main-main-cd56827b1ced93c9d06f.js  main-main-e30a8b1b1652aac4b251.js
referral/static/styles/: style.css
referral/templates/: index.html
referral/templates/layout/: basis.html  profile.html
referral/templates/users/: login.html  password_change.html  profile.html  profile_change.html  profile_delete.html  referral_code.html  register.html  rreferral_code.html  token_repeat.html
referral/views_more/: views_account.py  views_profile.py  views_referral.py  views_service.py
